--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
-	"name": "Chrome Extension with Preact and Vite",
-	"short_name": "CEPV",
+	"name": "Hot Corner Shortcuts",
+	"short_name": "HCS",
 	"description": "A Chrome Extension Boilerplate for Preact with Manifest Version 3",
 	"version": "1.0",
 	"author": "Faisal Ahmed",
